--- a/src/pages/HighScore.css
+++ b/src/pages/HighScore.css
@@ -2,4 +2,10 @@
   display: flex;
   flex-direction: column;
   font-weight: 700;
+  color: white;
+  margin-top: 20px;
+}
+
+.high-score-list div {
+  padding-bottom: 10px;
 }
